minor changes for setting file
update:
Change member CanId of class Setting to DeviceID.
Change public function name SendBytes to SendMessages
Change private function SendByte to SendFrame
Change baudrate definition in setting file from int to string.

--- a/CANComm/CANComm/settingsample.json
+++ b/CANComm/CANComm/settingsample.json
@@ -1,13 +1,13 @@
 {
-  "CAN": 
+  "CAN":
   {
-    "DeviceTypeStr": 1,
+    "DeviceType": 1,
     "DeviceID": 0,
     "Channel": 0,
     "AccCode": 0,
     "AccMask": 16777215,
     "Filter": 0,
     "Mode": 0,
-    "BaudRate": 7
+    "BaudRate": "500"
   }
 }
