parallel threads added and Receive Methods optimized
1. Add two threads for sending periodic messages and receive all frames.
2. optimized receiving method.

--- a/CANComm/CANComm/settingsample.json
+++ b/CANComm/CANComm/settingsample.json
@@ -8,6 +8,7 @@
     "AccMask": 16777215,
     "Filter": 0,
     "Mode": 0,
-    "BaudRate": "500"
+    "BaudRate": "500",
+    "MaxInterval": 100
   }
 }
