--- a/CANComm/CANComm/CANComm.csproj
+++ b/CANComm/CANComm/CANComm.csproj
@@ -48,13 +48,25 @@
     <Compile Include="CANComm.cs" />
     <Compile Include="ECAN.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Resource.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resource.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="PeriodicSequence.csv" />
     <None Include="settingsample.json" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Document\" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resource.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resource.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
