--- a/CANComm/SWS.Key/SWS.csproj
+++ b/CANComm/SWS.Key/SWS.csproj
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Key.cs" />
+    <Compile Include="Press.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
