add swapbitorder for ACC part

--- a/CANComm/CANComm/settingsample.json
+++ b/CANComm/CANComm/settingsample.json
@@ -9,6 +9,7 @@
     "Filter": 0,
     "Mode": 0,
     "BaudRate": "500",
-    "MaxInterval": 100
+    "MaxInterval": 100,
+    "SwapBitOrder":  true
   }
 }
