--- a/CANComm/CANComm/settingsample.json
+++ b/CANComm/CANComm/settingsample.json
@@ -10,6 +10,7 @@
     "Mode": 0,
     "BaudRate": "500",
     "MaxInterval": 100,
-    "SwapBitOrder":  true
+    "SwapBitOrder": true,
+    "SwapByteOrder": false
   }
 }
